# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16EFic4wjm9wn05eGUU7612ue7QvcjETEFGNmNQo4xtxs=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16x63jLk5Oc-puAfZguCCL40xN_YhUOXT1q2Aw0E49j1xE=',
      'err': 0,
    }),
  ])
# ---
